[package]
name = "iraq-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.1", features = ["fs", "trace"] }